[gd_scene load_steps=3 format=3 uid="uid://bavl2ftcyf4oy"]

[ext_resource type="Script" path="res://systems/asteroid_spawn_system/asteroid_spawn_system.gd" id="1_wu0oo"]

[sub_resource type="Curve2D" id="Curve2D_qsmnx"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 64, -192, 0, 0, 0, 0, 1856, -192)
}
point_count = 2

[node name="AsteroidSpawnSystem" type="Node"]
script = ExtResource("1_wu0oo")

[node name="Spawn" type="Timer" parent="."]
wait_time = 10.0

[node name="SpawnInterval" type="Timer" parent="."]
wait_time = 0.5

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_qsmnx")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(64, -192)

[connection signal="timeout" from="Spawn" to="." method="_on_spawn_timeout"]
[connection signal="timeout" from="SpawnInterval" to="." method="_on_spawn_interval_timeout"]
